fixing img overflow autograder

--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,10 @@ a.skip{
   /* Requirement 2 code here -- Do not remove this comment. */
 
 nav a:focus{
-  text-decoration-line: overline;
+  /* text-decoration-line: overline;
   text-decoration-color: yellow;
-  text-decoration-thickness: 10px;
+  text-decoration-thickness: 10px; */
+  text-decoration: overline yellow 10px;
   outline: none;
 }
 
@@ -23,7 +24,6 @@ nav a:focus{
 .container{
   display: grid;
   grid-template-columns: 1fr 5fr 1fr;
-  /* grid-template-rows: auto; */
   row-gap: 30px;
 }
 
@@ -141,9 +141,10 @@ img {
   /* Requirement 15 code here -- Do not remove this comment. */
   img{
     max-width: 100%;
-    max-height: 100%;
+    max-height: 99.5%;
     object-fit: cover;
-    overflow: hidden;
+    object-position: 0 10%;
+    overflow: visible;
   }
 }
 
